<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/add_hint_text"
                    style="@style/headline_3"
                    android:layout_marginTop="@dimen/default_space"
                    android:paddingEnd="50dp"
                    android:text="@string/add_items_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry"
                    tools:visibility="gone" />

                <de.hs_rm.recipe_me.ui.component.UnscrollableListView
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0dp"
                    android:listSelector="@android:color/transparent"
                    android:paddingHorizontal="9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry"
                    tools:listitem="@layout/shopping_list_listitem" />

                <ImageButton
                    android:id="@+id/clear_list_button"
                    style="@style/small_circle_button"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="@dimen/default_space"
                    android:contentDescription="@string/remove_checked_items"
                    android:paddingBottom="2dp"
                    android:src="@drawable/ic_baseline_clear_all_24"
                    app:tooltipTextCompat="@{@string/remove_checked_items}"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/list_view"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
