<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary">

        <include
            android:id="@+id/header"
            layout="@layout/material_header"
            app:headlineText="@{@string/shopping_list}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_wrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="@dimen/outline_horizontal"
            android:paddingEnd="@dimen/outline_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_item_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/add_item_edit_text"
                    style="@style/edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_space"
                    android:hint="@string/new_ingredient"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:maxLength="@integer/shopping_list_item_name_max_length"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.7"
                    tools:ignore="LabelFor"
                    tools:maxLength="@integer/shopping_list_item_name_max_length"
                    tools:text="@tools:sample/lorem/random" />

                <!--TODO plus in white-->
                <ImageButton
                    android:id="@+id/add_item_button"
                    android:layout_width="@dimen/small_button_size"
                    android:layout_height="@dimen/small_button_size"
                    android:background="@null"
                    android:contentDescription="@string/add_to_shopping_list"
                    android:padding="@dimen/small_button_padding_small_icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_add_circle_24"
                    android:tint="?attr/colorPrimaryVariant"
                    app:layout_constraintBottom_toBottomOf="@id/add_item_edit_text"
                    app:layout_constraintStart_toEndOf="@id/add_item_edit_text"
                    app:tooltipTextCompat="@{@string/add_to_shopping_list}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/shopping_list_list_layout"
                layout="@layout/shopping_list_list_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_item_wrapper" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_button"
            style="@style/custom_floating_action_button"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_baseline_share_24"
            android:backgroundTint="?attr/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tooltipTextCompat="@{@string/share}"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
